# Detector-Geant4

./: README.md
MLS/: CMakeLists.txt  MLS.cc
MLS-build/: CMakeCache.txt  MLS  Makefile  NIIKC.root  cmake_install.cmake  data.txt
MLS/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  SteppingAction.hh
MLS/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc
